Added vector averaging method

--- a/word_vectors.ipynb
+++ b/word_vectors.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 49,
    "metadata": {
     "collapsed": true
    },
@@ -14,7 +14,8 @@
     "import re\n",
     "from nltk.corpus import stopwords\n",
     "import nltk.data\n",
-    "tokenizer = nltk.data.load('tokenizers/punkt/english.pickle')"
+    "tokenizer = nltk.data.load('tokenizers/punkt/english.pickle')\n",
+    "import numpy as np"
    ]
   },
   {
@@ -806,28 +807,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'berlin'"
-      ]
-     },
-     "execution_count": 32,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "model.doesnt_match(\"france england germany berlin\".split())"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 33,
    "metadata": {
     "collapsed": false
@@ -846,37 +825,6 @@
    ],
    "source": [
     "model.doesnt_match(\"paris berlin london austria\".split())"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 34,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[(u'woman', 0.6326664090156555),\n",
-       " (u'lady', 0.599497377872467),\n",
-       " (u'lad', 0.5834004282951355),\n",
-       " (u'farmer', 0.5373972654342651),\n",
-       " (u'businessman', 0.5247150659561157),\n",
-       " (u'monk', 0.5235430598258972),\n",
-       " (u'men', 0.521361768245697),\n",
-       " (u'chap', 0.5202916264533997),\n",
-       " (u'guy', 0.5120640397071838),\n",
-       " (u'soldier', 0.5074631571769714)]"
-      ]
-     },
-     "execution_count": 34,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "model.most_similar(\"man\")"
    ]
   },
   {
@@ -908,6 +856,41 @@
    ],
    "source": [
     "model.most_similar(\"awful\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# One challenge with the IMDB dataset is the variable-length reviews. \n",
+    "# We need to find a way to take individual word vectors \n",
+    "# and transform them into a feature set that is the same length for every review.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<gensim.models.word2vec.Word2Vec at 0x7f142e341f90>"
+      ]
+     },
+     "execution_count": 50,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "model"
    ]
   },
   {
