--- a/bag_of_words_rf.ipynb
+++ b/bag_of_words_rf.ipynb
@@ -2,14 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 17,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
     "# Imports\n",
-    "import pandas as pd\n"
+    "import pandas as pd\n",
+    "from bs4 import BeautifulSoup\n",
+    "from nltk.corpus import stopwords\n",
+    "from nltk.stem.snowball import SnowballStemmer\n",
+    "from nltk.stem import WordNetLemmatizer\n",
+    "import re"
    ]
   },
   {
@@ -45,14 +50,66 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "# Preprocessing"
+    "# Preprocessing\n",
+    "def clean_review (review):\n",
+    "    review_text = BeautifulSoup(review).get_text()\n",
+    "    letters_only = re.sub(\"[^a-zA-Z]\", \" \", review_text)\n",
+    "    words = letters_only.lower().split()\n",
+    "    stop_words = set(stopwords.words(\"english\"))\n",
+    "    filtered_words = [w for w in words if not w in stop_words]\n",
+    "    # Lemmatizing\n",
+    "    wordnet_lemmatizer = WordNetLemmatizer()\n",
+    "    word_list = [wordnet_lemmatizer.lemmatize(w) for w in filtered_words]\n",
+    "    \n",
+    "    return (\" \".join(word_list))\n",
+    "    "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "clean_review = clean_review(train['review'][0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "u'stuff going moment mj started listening music watching odd documentary watched wiz watched moonwalker maybe want get certain insight guy thought really cool eighty maybe make mind whether guilty innocent moonwalker part biography part feature film remember going see cinema originally released subtle message mj feeling towards press also obvious message drug bad kay visually impressive course michael jackson unless remotely like mj anyway going hate find boring may call mj egotist consenting making movie mj fan would say made fan true really nice actual feature film bit finally start minute excluding smooth criminal sequence joe pesci convincing psychopathic powerful drug lord want mj dead bad beyond mj overheard plan nah joe pesci character ranted wanted people know supplying drug etc dunno maybe hate mj music lot cool thing like mj turning car robot whole speed demon sequence also director must patience saint came filming kiddy bad sequence usually director hate working one kid let alone whole bunch performing complex dance scene bottom line movie people like mj one level another think people stay away try give wholesome message ironically mj bestest buddy movie girl michael jackson truly one talented people ever grace planet guilty well attention gave subject hmmm well know people different behind closed door know fact either extremely nice stupid guy one sickest liar hope latter'"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
