--- a/word_vectors.ipynb
+++ b/word_vectors.ipynb
@@ -778,7 +778,7 @@
     "# It can be helpful to create a meaningful model name and \n",
     "# save the model for later use. You can load it later using Word2Vec.load()\n",
     "model_name = \"300features_40minwords_10context\"\n",
-    "model.save(model_name)"
+    "model.save(\"models/\" + model_name)"
    ]
   },
   {
